Tue Mar 21 13:22:07 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/native.c:
	- applied patch from Richard Krehbiel (cf "ODBC datetime literal issue")

Tue Mar 21 08:49:44 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.in src/dblib/dblib.c:
	- fix declaration after statements

Mon Mar 20 15:28:25 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c: fix error in bcp_colfmt

Mon Mar 20 15:00:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c:
	- remove some double checks
	- return correct values from CHECK_PARAMETER
	- fix some possible core if dbproc == NULL

Mon Mar 20 09:42:55 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh: added timeout

Sun Mar 19 18:34:47 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-auto.sh: fix typo in header
	* src/dblib/dblib.c: remove double checks

Sun Mar 19 18:33:14 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/genparams.c src/odbc/unittests/transaction.c:
	- remove warnings on 64bit int

Sun Mar 19 09:27:09 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c src/dblib/dblib.c more logging repairs

Sat Mar 18 12:34:02 EST 2006	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h src/dblib/bcp.c
	- validate parameters.  Unable to run unittest due to down server.

Sat Mar 18 01:27:32 EST 2006	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h src/dblib/dblib.c src/dblib/rpc.c
	- test parameters for all public functions (except bcp)

Fri Mar 17 01:35:17 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/rpc.c
	- added a TDSDUMP log entry for every public function

Thu Mar 16 09:59:25 EST 2006	JK Lowden <jklowden@schemamania.org>
	* TODO add rcp error messages
	* src/apps/bsqldb.c exit if severity > 10

Wed Mar 15 00:41:11 EST 2006	JK Lowden <jklowden@schemamania.org>